--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
     --primary-color: #9F4200;
@@ -6,7 +7,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 20px;
     background-color: #f5f5f5;
 }
@@ -110,11 +111,21 @@ label {
 }
 
 input[type="text"] {
+    font-family: 'Poppins';
+    outline: none;
     flex: 1;
     padding: 8px;
-    border: 1px solid #ddd;
+    border: 2px solid #ddd;
     border-radius: 4px;
-    font-size: 14px;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: all 0.3s;
+}
+
+input[type="text"]:focus {
+    border: 2px solid #9F4200;
 }
 
 button {
