--- a/public/styles.css
+++ b/public/styles.css
@@ -6,31 +6,57 @@
     --primary-hover: #753100;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
-    margin: 20px;
     background-color: #f5f5f5;
 }
 
 .top-bar {
     background-color: var(--primary-color);
     color: white;
-    padding: 15px 20px;
+    /* padding: 20px 30px; */
+    padding: 0 0 0 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 0 0 8px 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    /* border-radius: 0 0 8px 8px; */
+    /* box-shadow: 0 2px 4px rgba(0,0,0,0.1); */
     margin-bottom: 20px;
+}
+
+.left-section {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    width: 100%;
+}
+
+.title {
+    font-family: 'Lato', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    font-style: normal;
+    color: white;
+    white-space: nowrap;
+    cursor: pointer;
+}
+
+.title a {
+    text-decoration: none;
+    color: white;
 }
 
 .logo {
     display: flex;
     align-items: center;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    gap: 10px;
+    justify-content: center;
+    width: 100%;
 }
 
 .logo-img {
@@ -41,16 +67,60 @@ body {
 .right-section {
     display: flex;
     align-items: center;
-    gap: 16px;
+    justify-content: right;
+    width: 100%;
 }
 
-.title {
-    font-family: 'Lato', sans-serif;
-    font-size: 32px;
-    font-weight: 400;
-    font-style: normal;
-    color: white;
-    white-space: nowrap;
+/* .right-section .menu {
+    cursor: pointer;
+    font-size: 28px;
+} */
+
+.icon {
+    display: flex;
+    align-items: center;
+    padding: 20px 25px 20px 25px;
+    /* background-color: red; */
+}
+
+.dropbtn {
+    font-size: 28px;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #eee;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    font-weight: 500;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .icon {
+    background-color: var(--primary-hover);
 }
 
 .container {
@@ -59,7 +129,7 @@ body {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
@@ -69,6 +139,9 @@ h1 {
 }
 
 .search-section {
+    /* display: flex;
+    flex-direction: column;
+    gap: 20px; */
     background-color: #f9f9f9;
     padding: 20px;
     border-radius: 5px;
@@ -79,6 +152,7 @@ h1 {
     display: flex;
     align-items: center;
     gap: 16px;
+    margin: 20px 5px;
 }
 
 .adv-search-btn {
@@ -100,7 +174,7 @@ h1 {
 
 .search-row {
     display: flex;
-    gap: 20px;
+    gap: 10px;
     margin-bottom: 15px;
     align-items: center;
 }
@@ -116,7 +190,7 @@ input[type="text"] {
     flex: 1;
     padding: 8px;
     border: 2px solid #ddd;
-    border-radius: 4px;
+    border-radius: 5px;
     font-size: 15px;
     font-weight: 500;
     padding: 10px 15px;
@@ -125,30 +199,35 @@ input[type="text"] {
 }
 
 input[type="text"]:focus {
-    border: 2px solid #9F4200;
+    border: 2px solid var(--primary-color);
 }
 
 button {
     background-color: var(--primary-color);
     color: white;
     padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
+    border: 2px solid var(--primary-color);
+    border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: 500;
+    font-family: 'Poppins';
 }
 
 button:hover {
+    border: 2px solid var(--primary-hover);
     background-color: var(--primary-hover);
 }
 
 .clear-btn {
     background-color: #6c757d;
-    margin-left: 10px;
+    border: 2px solid #6c757d;
+    /* margin-left: 10px; */
 }
 
 .clear-btn:hover {
     background-color: #545b62;
+    border: 2px solid #545b62;
 }
 
 table {
@@ -157,7 +236,8 @@ table {
     margin-top: 20px;
 }
 
-th, td {
+th,
+td {
     border: 1px solid #ddd;
     padding: 12px;
     text-align: left;
