--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-/* Custom font - Draconis Regular */
-@font-face {
-    font-family: 'Draconis';
-    src: url('../font/Draconis.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&display=swap');
 
 :root {
     --primary-color: #9F4200;
@@ -59,10 +51,10 @@ html {
 }
 
 .title {
-    font-family: 'Draconis', sans-serif;
+    font-family: 'Domine', serif;
     text-transform: uppercase;
-    font-size: 26px;
-    font-weight: 300;
+    font-size: 20px;
+    font-weight: 600;
     letter-spacing: 1px;
 }
 
