added link to as6 files in dropdown

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -110,7 +110,9 @@ html {
     font-weight: 500;
     text-decoration: none;
     display: block;
+    text-align: center;
     transition: all 0.2s ease;
+    
 }
 
 .dropdown-content a:hover {
